Rebrand to racket24

--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
 
-      <a href="/index.html" class="navbar-brand">Daily Racket</a>
+      <a href="/index.html" class="navbar-brand">Racket24</a>
 
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
               data-target="#navbar_collapse" aria-controls="navbar_collapse"
@@ -57,7 +57,7 @@
               </a>
 
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="/tags/first.html">first</a><a class="dropdown-item" href="/tags/Racket.html">Racket</a>
+                <a class="dropdown-item" href="/tags/first.html">first</a><a class="dropdown-item" href="/tags/Racket.html">Racket</a><a class="dropdown-item" href="/tags/setup.html">setup</a>
               </div>
             </li>
 
