--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Daily Racket</title>
-    <meta name="description" content="Daily Racket">
+    <title>Racket24</title>
+    <meta name="description" content="Racket24">
     <meta name="author"      content="Viet Hung Nguyen <hvnsweeting>">
     <meta name="keywords"    content="Racket, first, all, setup">
     <meta name="viewport"    content="width=device-width, initial-scale=1.0">
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
 
-      <a href="/index.html" class="navbar-brand">Daily Racket</a>
+      <a href="/index.html" class="navbar-brand">Racket24</a>
 
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
               data-target="#navbar_collapse" aria-controls="navbar_collapse"
