--- a/_src/page-template.html
+++ b/_src/page-template.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
 
-      <a href="@|uri-prefix|/index.html" class="navbar-brand">Daily Racket</a>
+      <a href="@|uri-prefix|/index.html" class="navbar-brand">Racket24</a>
 
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
               data-target="#navbar_collapse" aria-controls="navbar_collapse"
